Try to fix tag input wrapping

--- a/public/css/frdr-theme.css
+++ b/public/css/frdr-theme.css
@@ -293,8 +293,8 @@ input.search_bar {
 
 .bootstrap-tagsinput .tag {
   background-color: #2882bb;
-  padding: 4px 8px;
-  border-radius:  3px;
+  padding: 4px 4px;
+  border-radius: 3px;
   font-size: 15px;
 }
 
